--- a/students/savchak_marharyta/10_block_model/productly/css/style.css
+++ b/students/savchak_marharyta/10_block_model/productly/css/style.css
@@ -11,24 +11,43 @@ body {
     margin-bottom: 100px;
 }
 
-.clear-fix {
+.header {
+    padding-top: 11px;
+}
+
+.clear-fix::after {
     content: '';
     display: block;
     clear: both;
 }
 
-
 .logo {
-    box-sizing: border-box;
-    display: block;
     float: left;
-    padding-right: 127px;
+    padding-right: 159px;
+
+}
+
+.logo__wrapper {
+    display: inline-block;
+}
+
+.logo__wrapper:not(:last-of-type) {
+    padding-right: 6px;
+}
+
+.logo__wrapper:not(:first-of-type) {
+    padding-top: 2px;
 }
 
 .logo__img {
+    max-height: 24px;
+}
+
+.menu {
     display: inline-block;
-    box-sizing: border-box;
+    /* max-width: 33.3%; */
     margin: 0 auto;
+    padding: 4px 0;
 }
 
 .menu__item {
@@ -51,23 +70,43 @@ body {
 
 .header__buttons {
     float: right;
+    padding-top: 7px;
 }
 
-.header__buttons:not(:last-of-type) {
-    padding-right: 20px;
+.button__wrapper {
+    display: inline-block;
+}
+
+.button__wrapper:not(:first-of-type) {
+    padding-left: 23px;
+
 }
 
 .btn {
     text-decoration: none;
+    padding: 10px 17px;
+    border: 1px solid;
+    border-radius: 7%;
+    font-weight: 600;
+}
+
+.buttons__sign-in {
+    color: #2F281E;
+    border: 1px solid #BCD0E5;
+}
+
+.buttons__sign-up {
+    color: #FFF;
+    background-color: #F90;
 }
 
 .content {
-    max-width: 50%;
-    float: right;
+    float: left;
 }
 
 .heroblock__img {
     float: right;
+    box-sizing: border-box;
 }
 
 img {
@@ -76,5 +115,5 @@ img {
 
 .heroblock {
     display: inline-block;
-    box-sizing: border-box;
+
 }
