--- a/students/savchak_marharyta/10_block_model/productly/css/style.css
+++ b/students/savchak_marharyta/10_block_model/productly/css/style.css
@@ -3,12 +3,13 @@
 body {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 13px;
+    color: #2F281E;
 }
 
 .container {
     max-width: 960px;
     margin: 0 auto;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 
 .header {
@@ -45,7 +46,6 @@ body {
 
 .menu {
     display: inline-block;
-    /* max-width: 33.3%; */
     margin: 0 auto;
     padding: 4px 0;
 }
@@ -79,14 +79,13 @@ body {
 
 .button__wrapper:not(:first-of-type) {
     padding-left: 23px;
-
 }
 
 .btn {
     text-decoration: none;
-    padding: 10px 17px;
+    padding: 11px 20px;
     border: 1px solid;
-    border-radius: 7%;
+    border-radius: 7px;
     font-weight: 600;
 }
 
@@ -101,19 +100,46 @@ body {
 }
 
 .content {
+    padding-top: 45px;
     float: left;
 }
 
 .heroblock__img {
     float: right;
-    box-sizing: border-box;
+    max-width: 53%;
+
+}
+
+.heroblock__wrapper {
+    display: inline-block;
 }
 
 img {
     max-width: 100%;
 }
 
-.heroblock {
-    display: inline-block;
+.heroblock__title {
+    font-size: 38px;
+    font-weight: 700;
+    margin-bottom: 25px;
 
+}
+
+.heroblock__text {
+    font-size: 15px;
+    color: #544837;
+
+
+}
+
+.heroblock__button-wrapper {
+    padding-top: 30px;
+}
+
+.heroblock__button {
+    color: #FFF;
+    background-color: #F90;
+    border: 1px solid #F90;
+    padding: 12px 36.5px;
+    border-radius: 5px;
 }
