fill main content

--- a/students/linov_mykhailo/exam_one/src/css/_variables.scss
+++ b/students/linov_mykhailo/exam_one/src/css/_variables.scss
@@ -3,6 +3,8 @@ $white-color: #fff;
 $violet-color: #5373FD;
 $darker-violet-color: #486BFE;
 $grey-color: #999;
+$dark-grey-color: #333333;
+$grey-card-color: #232323E5;
 
 $border-btn-color: $violet-color;
 $btn-color: $violet-color;
