--- a/students/linov_mykhailo/exam_one/src/css/header/_hero.scss
+++ b/students/linov_mykhailo/exam_one/src/css/header/_hero.scss
@@ -1,8 +1,10 @@
 .header {
-    background: url("../../images/header.png"), lightgray 50% / cover;
+    background-image: url("../../images/header.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 100vh;
+    position: relative;
 
     &__hero {
         padding-top: 280px;
@@ -69,6 +71,7 @@
     background-color: $btn-color;
     text-decoration: none;
     text-transform: uppercase;
+    text-align: center;
     white-space: nowrap;
     box-sizing: border-box;
 
