--- a/students/linov_mykhailo/exam_one/src/css/_extend.scss
+++ b/students/linov_mykhailo/exam_one/src/css/_extend.scss
@@ -16,3 +16,9 @@
     padding: 0;
     list-style-type: none;
 }
+
+%bg-img-cover-center {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
