--- a/students/umienchuk_oksana/exams_first/src/css/_btn.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/_btn.scss
@@ -24,5 +24,9 @@
         &:hover {
             text-decoration: underline;
         }
+
+        @include media(xs) {
+            padding: 10px 18px;
+        }
     }
 }
