--- a/students/umienchuk_oksana/exams_first/src/css/header/_header.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/header/_header.scss
@@ -21,7 +21,7 @@
     // .header__menu
 
     &__menu {
-        background-color: $accent;
+        background-color: $default-bg-color-nav;
         box-sizing: border-box;
     }
 
@@ -54,6 +54,7 @@
         text-decoration: none;
         display: inline-block;
         padding: 0 15px;
+
     }
 
     // .main__icon-img
@@ -78,9 +79,20 @@
 
 .icon-white {}
 
+.menu-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    gap: 40px;
+    align-items: center;
+
+    @include media(sm) {
+        display: block;
+    }
+}
 
 .menu {
-
+    position: relative;
     // .menu__logo
 
     &__logo {
@@ -101,18 +113,40 @@
     // .menu__items
 
     &__items {
-        list-style-type: none;
-        padding: 0;
-        display: flex;
-        gap: 40px;
-        align-items: center;
         margin: 20px 0;
 
+        @include media(md) {
+            gap: 20px;
+        }
+
+        @include media(sm) {
+            position: fixed;
+            // position: absolute;
+            z-index: 5;
+            top: 50%;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            background-color: $default-bg-color-nav;
+            text-align: center;
+            transform: translateX(-100%);
+            transition: transform .3s ease-in-out;
+
+            .menu-open-input:checked~& {
+                transform: translateX(0);
+            }
+        }
     }
 
     // .menu__item
 
-    &__item {}
+    &__item {
+        white-space: nowrap;
+
+        @include media(sm) {
+            margin: 20px;
+        }
+    }
 
     // .menu__link
 
@@ -127,6 +161,10 @@
         &:hover {
             text-decoration: underline;
         }
+
+        @include media(sm) {
+            padding: 10px;
+        }
     }
 }
 
@@ -135,4 +173,69 @@
     align-items: center;
     flex-wrap: nowrap;
     justify-content: space-between;
+}
+
+.menu-open {}
+
+.menu-open-input {
+    @include visuality-hidden;
+}
+
+.menu-open-label {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    // border: $default-border;
+
+    .menu-open-input:checked+& {
+        .menu-open-label__line {
+            background-color: transparent;
+
+            &::before {
+                top: 0;
+                transform: rotate(45deg);
+            }
+
+            &::after {
+                bottom: 0;
+                transform: rotate(-45deg);
+            }
+        }
+    }
+
+
+    // .menu-open-label__line
+
+    &__line {
+        position: relative;
+        display: block;
+        width: 85%;
+        background-color: $default-bg-color-menu-open;
+        height: 4px;
+        border-radius: 4px;
+        transition: background-color .2s ease-in-out;
+
+        &::before,
+        &::after {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 100%;
+            background-color: $default-bg-color-menu-open;
+            border-radius: inherit;
+            position: absolute;
+            transition: all .3s ease-in-out;
+        }
+
+        &::before {
+            top: -12px;
+        }
+
+        &::after {
+            bottom: -12px;
+        }
+    }
 }
