--- a/students/linov_mykhailo/exam_one/src/css/_variables.scss
+++ b/students/linov_mykhailo/exam_one/src/css/_variables.scss
@@ -5,6 +5,7 @@ $darker-violet-color: #486BFE;
 $grey-color: #999;
 $dark-grey-color: #333333;
 $grey-card-color: #232323E5;
+$black-color: #000;
 
 $border-btn-color: $violet-color;
 $btn-color: $violet-color;
