the examination royalty is completed

--- a/students/dunaieva_alona/exam_first_module/src/css/_fonts.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/_fonts.scss
@@ -1,8 +1,4 @@
 @include font-face('josefin-sans-v26-latin-regular');
+@include font-face('josefin-sans-v32-latin-300', 300);
 @include font-face('josefin-sans-v26-latin-700', 700);
-@include font-face('aleo-v12-latin-regular');
-// @include font-face('montserrat-v25-latin-regular');
-// @include font-face('montserrat-v25-latin-500', 500);
-// @include font-face('montserrat-v25-latin-600', 600);
-// @include font-face('montserrat-v25-latin-700', 700);
-// @include font-face('poppins-v20-latin-700', 700);
+@include font-face('aleo-v12-latin-regular', 400, 'normal', 'Aleo');
