--- a/students/dunaieva_alona/exam_first_module/src/css/_global.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/_global.scss
@@ -1,12 +1,17 @@
 @include grid ();
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: $main-font;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 28px;
     letter-spacing: 1.6px;
     font-size: 16px;
-    // color: $white-color;
+    color: $white-color;
+    overflow-x: hidden;
 }
 
 .container {
@@ -14,10 +19,6 @@ body {
     box-sizing: border-box;
     margin: 0 auto;
 }
-
-// .row {
-//     align-items: center;
-// }
 
 h1 {
     font-size: 48px;
@@ -28,17 +29,22 @@ h1 {
 
 h2 {
     @include h2;
+
+    @include media(sm) {
+        font-size: 1.5em
+    }
 }
 
+h3 {
+    @include h3;
 
+    @include media(sm) {
+        font-size: 1em;
+    }
+}
 
-// h3 {
-//     @include h3;
-//     font-size: 22px;
-// }
-
-// .mobile-only {
-//     @include media-m(sm) {
-//         display: none !important;
-//     }
-// }
+.md-mobile-only {
+    @include media-m (md) {
+        display: none !important;
+    }
+}
