--- a/students/dunaieva_alona/exam_first_module/src/css/_variables.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/_variables.scss
@@ -1,12 +1,14 @@
 // colors
 $dodger-blue: #5373FD;
 $white-color: #fff;
-$periwikle-gray: #BCD0E5;
-
+$black-color: #000;
+$dark-grey: #333;
+$icon-dodger-blue: $dodger-blue;
+$icon-red: #FF6363;
+$icon-blue: #00A2FF;
+$submit-btn: $icon-blue;
+$color-mobile-menu: rgba(83, 115, 253, 0.9);
 $btn-color: $dodger-blue;
-
-
-
 
 // fonts
 $fallback: Arial, Helvetica, sans-serif;
