--- a/students/dunaieva_alona/exam_first_module/src/css/_mixins.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/_mixins.scss
@@ -26,8 +26,10 @@
 
 //h3 
 @mixin h3 {
-    font-weight: 600;
-    color: $color-title;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    text-transform: uppercase;
 }
 
 //h4
