--- a/students/dunaieva_alona/exam_first_module/src/css/sections/_hero.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/sections/_hero.scss
@@ -1,5 +1,25 @@
 .hero {
+
+    .container {
+        padding-top: 110px;
+        padding-bottom: 124px;
+
+        @include media(md) {
+            padding-top: 50px;
+            padding-bottom: 60px;
+        }
+    }
+
+    @include media(sm) {
+        text-align: center;
+    }
+
+    .row {
+        @include flex-jsc-al (center, center);
+    }
+
     background: url(../../images/hero-bg.jpg);
+    background-position-y: -200px;
 
     &__title {
         padding-bottom: 24px;
@@ -8,31 +28,110 @@
     &__text {
         padding-bottom: 32px;
     }
+
+    &__btn {
+        padding-left: 32px;
+        padding-right: 32px;
+
+    }
 }
 
-.container {}
+.images-wrapper {
+    display: flex;
+    flex-direction: column;
+}
 
-.row {}
+.img {
+    padding: 0 100px 0 100px;
+    gap: 16px;
 
-.col-6 {}
+    @include media(md) {
+        padding: 0 15px 0 15px;
+    }
 
-.images-wrapper {}
+    &__nature-first {
+        align-self: flex-start;
 
-.action {}
+        @include media(md) {
+            align-self: center;
+        }
+    }
 
-.col-12 {}
+    &__nature-second {
+        align-self: flex-end;
 
-.icon-wrapper {}
+        @include media(md) {
+            align-self: center;
+        }
+    }
+
+}
+
+.action {
+    background-color: $dark-grey;
+}
 
 .icon {
+    @include flex-jsc-al (space-between, center);
 
-    // .icon__item
+    @include media(sm) {
+        flex-direction: column;
+    }
 
-    &__item {}
+    &__subtitle {
+        @include media(md) {
+            font-size: 1.5em;
+        }
+    }
+
+
+    &__list {
+        width: 424px;
+        text-align: center;
+        position: relative;
+
+        @include media(md) {
+            width: fit-content;
+        }
+
+        &:not(:last-of-type)::after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 300px;
+            border-top: 1px dashed #fff;
+            border-radius: 50%;
+            position: absolute;
+            bottom: -65%;
+            left: 54%;
+            clip-path: ellipse(200px 150px at 50% 0%);
+
+            @include media(md) {
+                display: none;
+            }
+
+        }
+    }
+
+    &__item {
+        width: 64px;
+        height: 64px;
+        padding: 16px;
+        background-color: $dark-grey;
+        position: relative;
+        z-index: 1;
+
+    }
 }
 
-.icon-search {}
+.icon-search {
+    fill: $icon-dodger-blue;
+}
 
-.icon-check {}
+.icon-check {
+    fill: $icon-red;
+}
 
-.icon-thumbs-up {}
+.icon-thumbs-up {
+    fill: $icon-blue;
+}
