the way to bg is debug

--- a/students/dunaieva_alona/exam_first_module/src/css/header/_search-bar.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/header/_search-bar.scss
@@ -1,5 +1,5 @@
 .search-bar {
-    background: url(../../images/header-bg.jpg) center, no-repeat;
+    background: url(../images/header-bg.jpg) center, no-repeat;
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
