--- a/students/dunaieva_alona/exam_first_module/src/css/sections/_feedback.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/sections/_feedback.scss
@@ -1,5 +1,5 @@
 .feedback {
-    background: url(../../images/feedback-bg.jpg) center;
+    background: url(../images/feedback-bg.jpg) center;
 
     &__title {
         text-align: center;
