--- a/students/dunaieva_alona/exam_first_module/src/css/sections/_hero.scss
+++ b/students/dunaieva_alona/exam_first_module/src/css/sections/_hero.scss
@@ -18,7 +18,7 @@
         @include flex-jsc-al (center, center);
     }
 
-    background: url(../../images/hero-bg.jpg);
+    background: url(../images/hero-bg.jpg);
     background-position-y: -200px;
 
     &__title {
