--- a/students/umienchuk_oksana/exam_first/src/css/header/_header.scss
+++ b/students/umienchuk_oksana/exam_first/src/css/header/_header.scss
@@ -5,12 +5,13 @@
     background-position: top;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh;
     display: flex;
     flex-direction: column;
 
     //header__container-main
     &__container-main {
+        position: relative;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -39,7 +40,7 @@
 .main-wrap {
     text-align: center;
     position: absolute;
-    bottom: 17%;
+    bottom: 10%;
 }
 
 .logo {
@@ -83,7 +84,7 @@
     list-style-type: none;
     padding: 0;
     display: flex;
-    gap: 20px;
+    // gap: 20px;
     align-items: center;
 
     @include media(md) {
@@ -119,9 +120,6 @@
     &__items {
         margin: 20px 0;
 
-        @include media(md) {
-            gap: 20px;
-        }
 
         @include media(sm) {
             // position: fixed;
