start creating burger

--- a/students/linov_mykhailo/exam_one/src/css/_variables.scss
+++ b/students/linov_mykhailo/exam_one/src/css/_variables.scss
@@ -11,7 +11,7 @@ $border-btn-color: $violet-color;
 $btn-color: $violet-color;
 
 $border-color: $violet-color;
-$default-border: 1px solid $violet-color;
+$default-border: 1px solid $white-color;
 
 $default-body-color: $white-color;
 
