--- a/students/linov_mykhailo/exam_one/src/css/header/_menu.scss
+++ b/students/linov_mykhailo/exam_one/src/css/header/_menu.scss
@@ -6,9 +6,23 @@
     background-color: $violet-color;
     padding: 32px 300px;
 
+    @media (max-width: 1355px) {
+        padding: 32px 200px;
+    }
+
+    @include media(lg) {
+        padding: 20px 100px;
+    }
+
+    @include media (md) {}
+
     .col-12 {
         @extend %flex-jst-wrap;
         padding: 0;
+
+        @include media (md) {
+            align-items: center;
+        }
     }
 }
 
@@ -23,9 +37,116 @@
     @extend %ul-not-marker;
     gap: 40px;
 
-    &__link {
+    &__item {
         @include font-family(400, 14px, $default-font-color, 20px, $sub-font);
         letter-spacing: 1.4px;
         text-transform: uppercase;
+
+        @include media(md) {
+            border-bottom: $default-border;
+        }
+    }
+
+    &__link {
+        color: $white-color;
+        text-decoration: none;
+
+        @include media(md) {
+            padding: 20px 0;
+            text-align: center;
+
+            .menu-open-input:checked~body {
+                overflow: hidden;
+            }
+        }
+    }
+
+    @include media(md) {
+        display: block;
+    }
+}
+
+.menu-wrapper {
+    &__item {
+        @include media(md) {
+            padding: 0;
+            position: fixed;
+            width: 500px;
+            top: 90px;
+            bottom: 0;
+            display: block;
+            text-align: center;
+            background-color: $violet-color;
+            transform: translateX(100%);
+            transition: transform .3s ease-in-out;
+            z-index: 2;
+
+            .menu-open-input:checked~& {
+                transform: translateX(0);
+            }
+        }
+    }
+}
+
+.menu-open-input {
+    @include visuality-hidden;
+}
+
+.menu-open-label {
+    @include media(md) {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 6px;
+        border: $default-border;
+
+        .menu-open-input:checked+& {
+            .menu-open-label__line {
+                background-color: transparent;
+
+                &::before {
+                    top: 0;
+                    transform: rotate(45deg);
+                }
+
+                &::after {
+                    bottom: 0;
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+
+        &__line {
+            position: relative;
+            display: block;
+            width: 70%;
+            background-color: $white-color;
+            height: 4px;
+            border-radius: 4px;
+            border-color: $white-color;
+            transition: background-color .3s ease-in-out;
+
+            &::before,
+            &::after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: 100%;
+                background-color: $white-color;
+                border-radius: inherit;
+                position: absolute;
+                transition: all .3s ease-in-out;
+            }
+
+            &::before {
+                top: -11px;
+            }
+
+            &::after {
+                bottom: -11px;
+            }
+        }
     }
 }
