--- a/students/savchak_marharyta/10_block_model/css_weather_forecast/css/style.css
+++ b/students/savchak_marharyta/10_block_model/css_weather_forecast/css/style.css
@@ -32,7 +32,21 @@ body {
     border: 5px solid #FFF;
     width: 25%;
     box-sizing: border-box;
-    padding: 24px 60px;
+    padding: 25px 60px 10px;
+}
+
+.weather-forecast:nth-of-type(n+4) {
+    border-top: none;
+}
+
+.lisabon,
+.paris,
+.venice,
+.tel-avive,
+.cair,
+.new-delhi,
+.san-francisco {
+    border-right: none;
 }
 
 .lisabon {
@@ -64,7 +78,7 @@ body {
     background-color: #99CC99;
 }
 
-.new-dehli {
+.new-delhi {
     background-color: #669999;
 }
 
@@ -95,7 +109,17 @@ body {
 }
 
 .weather {
+    max-width: 80%;
     margin: 0 auto;
+    padding-left: 28px;
+}
+
+.weather__half {
+    max-width: 30%;
+}
+
+.weather__full {
+    max-width: 15%;
 }
 
 .weather-forecast__title {
@@ -106,27 +130,32 @@ body {
     padding-right: 2px;
 }
 
-/* .weather-forecast__title-img {
-   
-} */
-
 .weather-forecast__city {
     font-weight: 400;
     text-align: center;
     margin: 0;
-    font-size: 20px;
+    font-size: 22px;
+    display: block;
 }
 
 .weather-forecast__temp {
     float: left;
-    padding-right: 10px;
+    padding-right: 12px;
 }
 
+
 .weather-forecast__img {
-    box-sizing: border-box;
+    float: left;
+    padding-top: 10px;
+    width: 48px;
+    object-fit: cover;
 
 }
 
 img {
     max-width: 100%;
+}
+
+.last-massege {
+    font-size: 15px;
 }
