--- a/students/linov_mykhailo/exam_one/src/css/main/_icons.scss
+++ b/students/linov_mykhailo/exam_one/src/css/main/_icons.scss
@@ -4,6 +4,10 @@
     .container {
         @extend %flex-jst-wrap;
         max-width: 1100px;
+
+        @include media(sm) {
+            flex-direction: column;
+        }
     }
 }
 
@@ -13,6 +17,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include media(sm) {
+        padding-top: 45px;
+        padding-bottom: 25px;
+    }
 
     &__text {
         @include font-family(400, 36px, $default-font-color, 40px, $sub-font);
