--- a/students/linov_mykhailo/exam_one/src/css/main/_whychooseus.scss
+++ b/students/linov_mykhailo/exam_one/src/css/main/_whychooseus.scss
@@ -3,7 +3,20 @@
     @extend %bg-img-cover-center;
 
     .container {
-        padding: 124px 0;
+        padding: 109px 0;
+
+        @media (max-width: 1355px) {
+            padding-left: 15px;
+        }
+
+        @include media (md) {
+            padding: 30px 15px;
+            text-align: center;
+        }
+
+        .btn {
+            margin-left: calc(50% - 106px);
+        }
     }
 
     &__header {
@@ -15,11 +28,32 @@
     &__text {
         font-weight: 300;
         letter-spacing: 1.6px;
-        padding-bottom: 32px;
+        padding-bottom: 7px;
+
+        &:last-of-type {
+            padding-bottom: 15px;
+        }
     }
 }
 
-.whyus-mountain {
-    padding-left: 70px;
-    padding-top: 10px;
+.whyus-mountain-top {
+    padding-left: 115px;
+
+    @include media (md) {
+        padding: 0;
+    }
+}
+
+
+.whyus-mountain-bottom {
+    padding-left: 185px;
+    padding-top: 5px;
+
+    @include media (md) {
+        padding-left: 20px;
+    }
+
+    @include media (sm) {
+        padding: 0;
+    }
 }
