--- a/students/linov_mykhailo/exam_one/src/css/header/_hero.scss
+++ b/students/linov_mykhailo/exam_one/src/css/header/_hero.scss
@@ -12,7 +12,13 @@
         margin: 0 auto;
         text-align: center;
 
-        // .header__hero_text
+        @include media (md) {
+            padding-top: 200px;
+        }
+
+        @include media (sm) {
+            padding-top: 150px;
+        }
 
         &_text {
             letter-spacing: 6.82px;
@@ -20,23 +26,6 @@
             padding-top: 8px;
             padding-bottom: 48px;
             @include font-family(400, 22px);
-        }
-
-        &_form {
-            position: relative;
-        }
-
-        &_form-input {
-            padding: 20px 334px 20px 36px;
-            width: 647px;
-            margin-bottom: 211px;
-
-            &::placeholder {
-                font-family: $sub-font;
-                @include font-family(400, 14px, $grey-color, 20px);
-                letter-spacing: 2.8px;
-                overflow: visible;
-            }
         }
 
         &_scroll-down {
