--- a/students/savchak_marharyta/11_flexbox/css/style.css
+++ b/students/savchak_marharyta/11_flexbox/css/style.css
@@ -2,18 +2,18 @@
 
 body {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
-    font-size: 13px;
+    font-size: 16px;
     color: #2F281E;
 }
 
 .container {
-    max-width: 960px;
+    max-width: 1200px;
     margin: 0 auto;
-    margin-bottom: 80px;
+    margin-bottom: 96px;
 }
 
 .header {
-    padding-top: 11px;
+    padding-top: 16px;
 }
 
 .clear-fix::after {
@@ -24,7 +24,7 @@ body {
 
 .logo {
     float: left;
-    padding-right: 159px;
+    padding-right: 200px;
 
 }
 
@@ -41,13 +41,13 @@ body {
 }
 
 .logo__img {
-    max-height: 24px;
+    max-height: 50px;
 }
 
 .menu {
     display: inline-block;
     margin: 0 auto;
-    padding: 4px 0;
+    padding: 7px 0;
 }
 
 .menu__item {
@@ -56,7 +56,7 @@ body {
 }
 
 .menu__item:not(:last-of-type) {
-    padding-right: 12px;
+    padding-right: 16px;
 }
 
 .menu__link {
@@ -70,7 +70,7 @@ body {
 
 .header__buttons {
     float: right;
-    padding-top: 7px;
+    padding-top: 5px;
 }
 
 .button__wrapper {
@@ -78,14 +78,15 @@ body {
 }
 
 .button__wrapper:not(:first-of-type) {
-    padding-left: 23px;
+    padding-left: 19px;
 }
 
 .btn {
+    font-family: Poppins, Arial, Helvetica, sans-serif;
     text-decoration: none;
-    padding: 11px 20px;
+    padding: 10px 28px;
     border: 1px solid;
-    border-radius: 7px;
+    border-radius: 5px;
     font-weight: 600;
 }
 
@@ -100,47 +101,47 @@ body {
 }
 
 .content {
-    padding-top: 45px;
-    float: left;
+    padding-top: 59px;
+
 }
 
-.heroblock__img {
+.heroblock__image-wrapper {
     float: right;
-    max-width: 53%;
-
 }
 
-.heroblock__wrapper {
-    display: inline-block;
-}
 
 img {
     max-width: 100%;
 }
 
 .heroblock__title {
-    font-size: 38px;
+    font-size: 44px;
     font-weight: 700;
-    margin-bottom: 25px;
-
+    margin-bottom: 29px;
+    line-height: 54px;
 }
 
 .heroblock__text {
-    font-size: 15px;
+    font-size: 18px;
+    line-height: 28px;
     color: #544837;
 
 
 }
 
+.heroblock__item {
+    display: inline-block;
+}
+
 .heroblock__button-wrapper {
-    padding-top: 30px;
+    padding-top: 23px;
 }
 
 .big-orange__button {
     color: #FFF;
     background-color: #F90;
     border: 1px solid #F90;
-    padding: 12px 36.5px;
+    padding: 12px 45px;
     border-radius: 5px;
 }
 
@@ -152,11 +153,6 @@ img {
     display: flex;
 }
 
-.container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
 
 .quality__image-wrapper {
     z-index: 0;
@@ -167,5 +163,40 @@ img {
 }
 
 .row {
+    padding-top: 48px;
     z-index: 1;
+    padding-bottom: 80px;
+    gap: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.first-section__title {
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
+    margin: 0;
+}
+
+.quality__title {
+    font-size: 22px;
+    font-weight: 600;
+    margin: 0;
+    display: block;
+    padding-top: 25px;
+}
+
+.quality__text {
+    padding-top: 18px;
+    margin: 0;
+    line-height: 26px;
+}
+
+.button-wrapper {
+    text-align: center;
+}
+
+.first-section__button {
+    text-decoration: none;
+    font-weight: 700;
 }
