--- a/students/dunaieva_alona/18_responsive_web_design/src/css/header/_header.scss
+++ b/students/dunaieva_alona/18_responsive_web_design/src/css/header/_header.scss
@@ -3,10 +3,22 @@
 
     &__container {
         @include flex-jsc-al(space-between, center);
+        margin-bottom: 65px;
+
+        @media screen and (max-width: 992px) {
+            margin-bottom: unset;
+        }
 
         @media screen and (max-width: 768px) {
             flex-direction: column;
+            text-align: center;
         }
+    }
+}
+
+.logo {
+    @media screen and (max-width: 768px) {
+        padding-bottom: 20px;
     }
 }
 
@@ -18,12 +30,9 @@
         flex-direction: column;
     }
 
-
-    // .menu__item
-
-    &__item {}
-
-    // .menu__link
+    @media screen and (max-width: 768px) {
+        padding-bottom: 30px;
+    }
 
     &__link {
         text-decoration: none;
@@ -40,17 +49,7 @@
     gap: 20px;
 
 
-    // .auth__link
-
-    &__link {}
+    @media screen and (max-width: 992px) {
+        flex-direction: column;
+    }
 }
-
-.hidden-md {}
-
-.btn {}
-
-.btn-secondary {}
-
-.btn-small {}
-
-.btn-primary {}
