--- a/students/dunaieva_alona/18_responsive_web_design/src/css/sections/_design.scss
+++ b/students/dunaieva_alona/18_responsive_web_design/src/css/sections/_design.scss
@@ -1,4 +1,9 @@
 .design {
+    margin-bottom: 70px;
+
+    @media screen and (max-width: 768px) {
+        margin-bottom: unset;
+    }
 
     &__overtext {
         line-height: 43px;
