--- a/students/dunaieva_alona/18_responsive_web_design/src/css/sections/_managers.scss
+++ b/students/dunaieva_alona/18_responsive_web_design/src/css/sections/_managers.scss
@@ -1,4 +1,9 @@
 .managers {
+    margin-bottom: 70px;
+
+    @media screen and (max-width: 768px) {
+        margin-bottom: unset;
+    }
 
     &__overtext {
         @extend .design__overtext;
