--- a/students/dunaieva_alona/18_responsive_web_design/src/css/sections/_tools.scss
+++ b/students/dunaieva_alona/18_responsive_web_design/src/css/sections/_tools.scss
@@ -1,5 +1,5 @@
 .tools {
-    background: url('../../images/tools/bg.svg') center bottom;
+    background: url('../images/tools/bg.svg') center bottom;
     background-size: cover;
     padding-bottom: 74px;
     margin-bottom: 103px;
