--- a/students/umienchuk_oksana/exam_first/src/css/nav-menu/_nav-menu.scss
+++ b/students/umienchuk_oksana/exam_first/src/css/nav-menu/_nav-menu.scss
@@ -11,6 +11,7 @@
     &__logo-link {
         text-decoration: none;
         color: inherit;
+        margin: 0;
 
         &:hover {
             text-decoration: underline;
@@ -47,6 +48,10 @@
     &__item {
         white-space: nowrap;
 
+        &:last-child {
+            padding: 0;
+        }
+
         @include media(sm) {
             &:not(:last-child) {
                 border-top: $default-border;
@@ -59,8 +64,8 @@
     &__link {
         text-decoration: none;
         display: block;
-        padding: 0 20px;
         color: $color-white;
+        padding: 0 20px;
 
         @include fonts-type($font-sub-font, $font-size-small, $font-weight-name, $line-height, $letter-spacing-menu, $text-transform-upper);
 
@@ -166,6 +171,20 @@
 
         &::after {
             bottom: -12px;
+        }
+
+        &-menu-small {
+            background-color: transparent;
+
+            &::before {
+                top: 0;
+                transform: rotate(45deg);
+            }
+
+            &::after {
+                bottom: 0;
+                transform: rotate(-45deg);
+            }
         }
     }
 }
